--- a/popup.html
+++ b/popup.html
@@ -2,24 +2,23 @@
 <html >
   <head>
     <meta charset="utf-8"/>
-    <title>Editor</title>
+    <title>Popup</title>
     <style type="text/css">
-        button {
-            width: 20em;
-            height: 3em;
-            margin-bottom: 1em;
-        }
+      button {
+        width: 20em;
+        height: 3em;
+        margin-bottom: 1em;
+      }
     </style>
   </head>
 
   <body>
-    <div id="app">
-      <button @click="showList">📖 Show saved tabs</button>
-      <button @click="saveCurrentTab">💾 Save this tab</button>
-      <button @click="saveAllTab">💾 Save all tabs</button>
-      <pre>{{errorText}}</pre>
+    <div>
+      <button id="showList">📖 Show saved tabs</button>
+      <button id="saveCurrentTab">💾 Save this tab</button>
+      <button id="saveAllTab">💾 Save all tabs</button>
+      <pre id="errorText"></pre>
     </div>
   </body>
-  <script src="vue.2.6.10.js"></script>
   <script src="popup.js"></script>
 </html>
