--- a/list.html
+++ b/list.html
@@ -87,11 +87,12 @@
       <div>
         <h3>Import</h3>
         <button id="buttonImport">Import</button>
-        <textarea id="textImportText" style="white-space: nowrap;" ></textarea>
+        <textarea id="textImportText"></textarea>
       </div>
       <div>
         <h3>Loaded Storage Data</h3>
         <textarea id="textStorageData"></textarea>
+        <button id="buttonClearAllData">Clear all data</button>
       </div>
     </div>
 
